forget password sin probar

--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ SIGNED_COOKIE_SECRET= "cookie_secret"
 GOOGLECLIENTID= "677009444232-m39194megnhvte4295dih3j2hhjit2cf.apps.googleusercontent.com"
 GOOGLECLIENTSECRET= "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"
 GOOGLECALLBACKURL= "http://localhost:8080/api/session/googlecallback"
+
+#NODEMAILER
+NODEMAILER_USER= "micromundo2020@gmail.com"
+NODEMAILER_PASS= marajxwxtkvjtwou
